--- a/metadata.yaml
+++ b/metadata.yaml
@@ -39,5 +39,6 @@ subjects:
 - !lcsh 'Science fiction'
 - !lcsh 'Human-alien encounters -- Fiction'
 - !lcsh 'Short stories'
+- GITenberg
 title: Diplomatic Immunity
 url: http://www.gutenberg.org/ebooks/32040
